@@ -18,6 +18,7 @@ Beta   1.0.4 - 2009-03-xx
 
 - Introduced sql::DataType::YEAR to complement MySQL's YEAR type. (Andrey)
 
+- Introduced PreparedStatement::getMetaData(). (Andrey)
 
 Alpha  1.0.3 - 2009-03-03
 
